<resources>
    <string name="app_name">MiTa Driver</string>
    <string name="app_name_1">MiTa</string>
    <string name="app_name_2">Driver</string>
    <string name="app_name_desc">Ứng dụng tiện ích cho driver của MiTa</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_in_phone">Tiếp tục với số điện thoại</string>
    <string name="sign_in_fb">Tiếp tục với Facebook</string>
    <string name="sign_in_gg">Tiếp tục với Google</string>
    <string name="sign_up">Chưa có tài khoản? <b>Đăng ký</b></string>
    <string name="or">hoặc</string>
    <string name="hint_auto_tv_city">Tỉnh thành</string>
    <string name="hint_auto_tv_type_work">Dịch vụ</string>
    <string name="last_name">Tên</string>
    <string name="email">Email</string>
    <string name="first_name">Họ</string>
    <string name="phone">Số điện thoại</string>
    <string name="phone_nation_VN">+84</string>
    <string name="license_plates">Biển số xe</string>
    <string name="register_now">Đăng ký ngay</string>
    <string name="register_for_driver">Trở thành tài xế ngay</string>
    <string name="login">Đã có tài khoản! <b>Đăng nhập</b></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Driver Name</string>
    <string name="nav_header_subtitle">User Phone</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Màn hình chính</string>
    <string name="menu_history">Lịch sử</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="menu_statistical">Thống kê</string>
    <string name="menu_language">Đổi ngôn ngữ</string>
    <string name="title_activity_maps">Map</string>
    <string name="log_out">Đăng xuất</string>
    <string name="log_out_title">Bạn có muốn đăng xuất?</string>
    <string name="cancel">Huỷ</string>
    <string name="welcome">Xin chào</string>
    <string name="select_pics">Chọn ảnh</string>
    <string name="change_avatar">Đổi Avatar</string>
    <string name="change_avatar_title">Bạn có muốn đổi avatar không</string>
    <string name="change">Thay đổi</string>
    <string name="waiting">Waiting.....</string>
    <string name="update_success">Cập nhật thành công</string>

    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="permission_require">Quyền chưa dược cấp</string>

</resources>