<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_statistical"
            android:icon="@drawable/ic_chart"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
        
        <item android:id="@+id/nav_switch"
            android:actionLayout="@layout/switch_menu"
            android:title="@string/menu_language"
            android:icon="@drawable/ic_language"/>
    </group>
</menu>