<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_up"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_back" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register_for_driver"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <AutoCompleteTextView
        android:id="@+id/edt_register_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_auto_tv_city"
        android:drawableRight="@drawable/ic_keyboard_arrow_down"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textSize="18dp"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@id/toolbar_sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_edittext"/>

    <AutoCompleteTextView
        android:id="@+id/edt_type_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_auto_tv_type_work"
        android:drawableRight="@drawable/ic_keyboard_arrow_down"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textSize="18dp"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@id/edt_register_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_edittext"/>

    <EditText
        android:id="@+id/edt_license_plate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/license_plates"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textSize="18dp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edt_type_work"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_edittext"/>

    <LinearLayout
        android:id="@+id/edt_register_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:weightSum="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_license_plate"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edt_register_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_edittext"
            android:padding="10dp"
            android:textSize="18dp"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/edt_register_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_edittext"
            android:padding="10dp"
            android:textSize="18dp"
            android:hint="@string/last_name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edt_register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:weightSum="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_register_full_name"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/edt_register_phone_nation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_phone_nation"
            android:padding="10dp"
            android:textSize="18dp"
            android:hint="@string/phone_nation_VN"/>

        <EditText
            android:id="@+id/edt_register_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="18dp"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:background="@drawable/bg_phone_number"
            android:padding="10dp"
            android:hint="@string/phone"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textSize="18dp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edt_register_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_edittext"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn_sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"/>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:textColor="@color/mitago_driver_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register"/>

</androidx.constraintlayout.widget.ConstraintLayout>